--- a/CDCL20250324.AppWebMVC/Views/Users/Edit.cshtml
+++ b/CDCL20250324.AppWebMVC/Views/Users/Edit.cshtml
@@ -4,49 +4,58 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
-<h4>User</h4>
+<h4>Usuario</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+            <div class="row">
+            <div class="form-group col-6">
                 <label asp-for="Username" class="control-label"></label>
                 <input asp-for="Username" class="form-control" />
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-6">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
+            <div class="row">
+            <div class="form-group col-6">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+                </div>
+            <div class="form-group col-6">
                 <label asp-for="Role" class="control-label"></label>
                 <input asp-for="Role" class="form-control" />
                 <span asp-validation-for="Role" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
+            <div class="row">
+            <div class="form-group col-12">
                 <label asp-for="Notes" class="control-label"></label>
                 <input asp-for="Notes" class="form-control" />
                 <span asp-validation-for="Notes" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
+<hr />
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="row">
+    <div class="form-group col-1">
+        <input type="submit" value="Guardar" class="btn btn-primary" /> |
+    </div>
+    <div class="form-group col-1">
+        <a asp-action="Index" class="btn btn-success">Volver</a>
+    </div>
 </div>
 
 @section Scripts {
