--- a/CDCL20250324.AppWebMVC/Views/Products/Delete.cshtml
+++ b/CDCL20250324.AppWebMVC/Views/Products/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Seguro de hacer esto?</h3>
 <div>
     <h4>Product</h4>
     <hr />
@@ -23,6 +23,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
+    </dl>
+    <hr />
+        <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
@@ -35,6 +38,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PurchasePrice)
         </dd>
+    </dl>
+    <hr />
+        <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Notes)
         </dt>
@@ -45,19 +51,19 @@
             @Html.DisplayNameFor(model => model.Brand)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Brand.Id)
+            @Html.DisplayFor(model => model.Brand.BrandName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Warehouse)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Warehouse.Id)
+            @Html.DisplayFor(model => model.Warehouse.WarehouseName)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-secondary">Volver</a>
     </form>
 </div>
