--- a/CDCL20250324.AppWebMVC/Views/Products/Details.cshtml
+++ b/CDCL20250324.AppWebMVC/Views/Products/Details.cshtml
@@ -22,6 +22,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
+    </dl>
+    <hr />
+        <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
@@ -34,6 +37,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PurchasePrice)
         </dd>
+    </dl>
+    <hr />
+        <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Notes)
         </dt>
@@ -44,17 +50,23 @@
             @Html.DisplayNameFor(model => model.Brand)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Brand.Id)
+            @Html.DisplayFor(model => model.Brand.BrandName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Warehouse)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Warehouse.Id)
+            @Html.DisplayFor(model => model.Warehouse.WarehouseName)
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<hr />
+<br />
+<div class="row">
+    <div class="form-group col-1">
+        <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Editar</a>
+    </div>
+    <div class="form-group col-1">
+        <a asp-action="Index" class="btn btn-success">Volver</a>
+    </div>
 </div>
