--- a/CDCL20250324.AppWebMVC/Views/Products/Index.cshtml
+++ b/CDCL20250324.AppWebMVC/Views/Products/Index.cshtml
@@ -5,11 +5,24 @@
 }
 
 <h1>Producto</h1>
-
-<p>
-    <a asp-action="Create">Crear producto</a>
-</p>
-<table class="table">
+<form asp-action="Index">
+    <div class="row">
+        <div class="col-4">
+            <div class="form-group">
+                <label class="control-label">Marcas</label>
+                <select name="Id" class="form-control" asp-items="ViewBag.Id"></select>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-3">
+        <div class="col-12">
+            <input type="submit" value="Buscar" class="btn btn-primary" />
+            <a class="btn btn-info" asp-action="Create">Ir a crear</a>
+        </div>
+    </div>
+    <br />
+</form>
+<table class="table" id="myTable">
     <thead>
         <tr>
             <th>
@@ -55,10 +68,10 @@
                 @Html.DisplayFor(modelItem => item.Notes)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Brand.Id)
+                    @Html.DisplayFor(modelItem => item.Brand.BrandName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Warehouse.Id)
+                    @Html.DisplayFor(modelItem => item.Warehouse.WarehouseName)
             </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success">Editar</a> |
