--- a/CDCL20250324.AppWebMVC/Views/Users/Edit.cshtml
+++ b/CDCL20250324.AppWebMVC/Views/Users/Edit.cshtml
@@ -51,7 +51,7 @@
 
 <div class="row">
     <div class="form-group col-1">
-        <input type="submit" value="Guardar" class="btn btn-primary" /> |
+        <input type="submit" value="Guardar" class="btn btn-primary" /> 
     </div>
     <div class="form-group col-1">
         <a asp-action="Index" class="btn btn-success">Volver</a>
