--- a/CDCL20250324.AppWebMVC/Views/Products/Delete.cshtml
+++ b/CDCL20250324.AppWebMVC/Views/Products/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Seguro de hacer esto?</h3>
 <div>
-    <h4>Product</h4>
+    <h4>Producto</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
