--- a/CDCL20250324.AppWebMVC/Views/Products/Index.cshtml
+++ b/CDCL20250324.AppWebMVC/Views/Products/Index.cshtml
@@ -7,12 +7,27 @@
 <h1>Producto</h1>
 <form asp-action="Index">
     <div class="row">
-        <div class="col-4">
+        <div class="col-6">
             <div class="form-group">
                 <label class="control-label">Marcas</label>
-                <select name="Id" class="form-control" asp-items="ViewBag.Id"></select>
+                <select name="BrandId" class="form-control" asp-items="ViewBag.BrandId"></select>
             </div>
         </div>
+   
+    <div class="col-6">
+        <div class="form-group">
+            <label class="control-label">Cant. Registros</label>
+            <select name="topRegistro" class="form-control">
+                <option selected value="10">10</option>
+                <option value="20">20</option>
+                <option value="60">60</option>
+                <option value="100">100</option>
+                <option value="500">500</option>
+                <option value="1000">1000</option>
+                <option value="0">Todos</option>
+            </select>
+        </div>
+    </div>
     </div>
     <div class="row mt-3">
         <div class="col-12">
@@ -20,6 +35,7 @@
             <a class="btn btn-info" asp-action="Create">Ir a crear</a>
         </div>
     </div>
+   
     <br />
 </form>
 <table class="table" id="myTable">
@@ -41,10 +57,10 @@
                 @Html.DisplayNameFor(model => model.Notes)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Brand)
+                @Html.DisplayNameFor(model => model.Brand.BrandName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Warehouse)
+                @Html.DisplayNameFor(model => model.Warehouse.WarehouseName)
             </th>
             <th></th>
         </tr>
